Fix particles have scrolling on smaller screen

--- a/index.css
+++ b/index.css
@@ -153,8 +153,6 @@
     text-align: center;
     position: relative;
     width: 100%;
-    height: auto;
-    overflow: auto;
 }
 
 .particles {
